ajout du role medecin et specialite dans le models medecins (medecin demeur un utilisateur mais il est linké au model medecin qui precise sa specialité
