# swagger-output.json
@@ -663,6 +663,19 @@
         }
       }
     },
+    "/api/utilisateurs/public/medecins": {
+      "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/api/utilisateurs/login": {
       "post": {
         "description": "",
@@ -802,6 +815,9 @@
                 },
                 "password": {
                   "example": "any"
+                },
+                "specialite": {
+                  "example": "any"
                 }
               }
             }
@@ -906,6 +922,9 @@
                   "example": "any"
                 },
                 "typecompte": {
+                  "example": "any"
+                },
+                "specialite": {
                   "example": "any"
                 }
               }
@@ -1023,6 +1042,9 @@
                   "example": "any"
                 },
                 "typecompte": {
+                  "example": "any"
+                },
+                "specialite": {
                   "example": "any"
                 }
               }
